# fc

./: Cargo.toml  LICENSE  README.md  fc.code-workspace
.github/workflows/: audit-check.yml  rust.yml
fc/: Cargo.toml  fc.rs  fc_lib.rs
fcweb/: Cargo.toml  fcweb.rs  fcweb_lib.rs
fcweb/src/: lib.rs
fcweb/templates/: hello.html
fcweb_actix/: Cargo.toml  fcweb_actix.rs  fcweb_actix_lib.rs
fcweb_actix/templates/: hello.html
src/: lib.rs  main.rs
templates/: hello.html
wwwroot/assets/: style.css
