[package]
name = "fc"
version = "0.2.0"
authors = ["likwoka"]
edition = "2018"
description = "A toy program to converts temperature between Fahrenheit and Celsius."
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
