[package]
name = "fc"
version = "0.4.0"
authors = ["Alex Li <likwoka@gmail.com>"]
edition = "2018"
description = "A toy program to converts temperature between Fahrenheit and Celsius."
license = "MIT OR Apache-2.0"
repository = "https://github.com/likwoka/fc.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name = "fc"
path = "fc.rs"

[lib]
name = "fc_lib"
path = "fc_lib.rs"