[package]
name = "fcweb"
version = "0.4.0"
authors = ["Alex Li <likwoka@gmail.com>"]
edition = "2018"
description = "actix web server side to converts temperature between Fahrenheit and Celsius."
license = "MIT OR Apache-2.0"
repository = "https://github.com/likwoka/fc.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
actix-service = "1"
askama = "0.10.3"
askama_actix = "0.11.1"
serde = { version = "1", features = ["derive"] }
fc = { path = "../fc" }

[[bin]]
name = "fcweb"
path = "fcweb.rs"

[lib]
name = "fcweb_lib"
path = "fcweb_lib.rs"