[package]
name = "fcweb_actix"
version = "0.4.0"
authors = ["Alex Li <likwoka@gmail.com>"]
edition = "2021"
description = "actix web server side to converts temperature between Fahrenheit and Celsius."
license = "MIT OR Apache-2.0"
repository = "https://github.com/likwoka/fc.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4", features = ["openssl"] }
actix-service = "2"
askama = "0.11.1"
askama_actix = "0.13.0"
env_logger = "0.8"
log = "0.4"
openssl = { version = "0.10", features = ["v110"] }
serde = { version = "1", features = ["derive"] }
fc = { path = "../fc" }

[[bin]]
name = "fcweb_actix"
path = "fcweb_actix.rs"

[lib]
name = "fcweb_actix_lib"
path = "fcweb_actix_lib.rs"